tests/final/expect/15__diag__malformed_pp_ifexpr_rparen_no_crash.diag
Diagnostics:
Error: preprocessing failed
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__diag__malformed_pp_ifexpr_rparen_no_crash.c:1:1: error: invalid #if expression
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__diag__malformed_pp_ifexpr_rparen_no_crash.c:1:1: error: invalid #if expression
